objects/Oracle_Repair__c.object
<CustomObject>
    <description>data from the R12 apps.qa_results_v view filtered by order # starts with 8 and is not 8888888.</description>
    <fields>
        <fullName>Case_Account__c</fullName>
        <formula>Order__r.Case__r.Account.Name</formula>
        <label>Case Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_310, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)) 
&amp; Order__r.Case__r.Id , TRIM(Order__r.Case__r.CaseNumber) , &apos;_parent&apos;)</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <label>Case Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Order__r.Case__r.Owner:User.Full_Name__c</formula>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Order__r.Case__r.Subject</formula>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Category__c</fullName>
        <description>Character28 field</description>
        <inlineHelpText>Defect Category</inlineHelpText>
        <label>Defect Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Details__c</fullName>
        <description>Character7 field</description>
        <inlineHelpText>Defect Details</inlineHelpText>
        <label>Defect Details</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Cloud_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Cloud Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Collection_Id_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_310, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)) 
&amp; Id , TRIM( Name ) , &apos;_parent&apos;)</formula>
        <label>Oracle Collection Id Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Created_By__c</fullName>
        <description>QA_CREATED_BY_NAME</description>
        <inlineHelpText>Oracle Created By</inlineHelpText>
        <label>Oracle Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Created_Date__c</fullName>
        <description>CREATION_DATE</description>
        <inlineHelpText>Oracle Created Date</inlineHelpText>
        <label>Oracle Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Oracle_Last_Update_By__c</fullName>
        <description>QA_LAST_UPDATED_BY_NAME</description>
        <inlineHelpText>Oracle Last Update By</inlineHelpText>
        <label>Oracle Last Update By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Last_Update_Date__c</fullName>
        <description>LAST_UPDATE_DATE field</description>
        <label>Oracle Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Oracle_Order_No_Link__c</fullName>
        <formula>Order__r.Oracle_Order_Number__c</formula>
        <label>Oracle Order # No Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Order__c</fullName>
        <formula>Order__r.Oracle_Order_Number_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Order #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Row_Id__c</fullName>
        <description>UID from oracle</description>
        <externalId>true</externalId>
        <label>Oracle Row Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Oracle Repairs</relationshipLabel>
        <relationshipName>Oracle_Repairs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part_No__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <label>Part No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Oracle Repairs</relationshipLabel>
        <relationshipName>Oracle_Repairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Action__c</fullName>
        <description>Character9 field</description>
        <inlineHelpText>Repair Action</inlineHelpText>
        <label>Repair Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Repair_Details__c</fullName>
        <description>Character10 field</description>
        <inlineHelpText>Repair Details</inlineHelpText>
        <label>Repair Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <description>CHARACTER4</description>
        <inlineHelpText>Serial Number</inlineHelpText>
        <label>Serial #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Oracle Repair</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_Details__c</columns>
        <columns>Oracle_Order__c</columns>
        <columns>Product__c</columns>
        <columns>Repair_Action__c</columns>
        <columns>Repair_Details__c</columns>
        <columns>Serial__c</columns>
        <columns>Oracle_Last_Update_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Oracle Collection Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Repairs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>